--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@ var menu = [];
     var map = L.map('map').setView([34.235038, -3.981148], 15);
     L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
                 maxZoom: 19,
-                attribution: '&copy; <a href=\"https://joevev.github.io/mziouka-poly-service.github.io/\" >Peluquería Barber King</a>'
+                attribution: '&copy; <a href=\"https://joevev.github.io/mziouka-poly-service.github.io/\" >MzPolyservices</a>'
             }).addTo(map);
             var googleStreets = L.tileLayer('http://{s}.google.com/vt/lyrs=s,h&x={x}&y={y}&z={z}',{
                 maxZoom: 20,
