--- a/index.html
+++ b/index.html
@@ -686,6 +686,8 @@ a:hover {
             <li><span>Barbe</span><span>10&#x20AC;</span></li>
             <li><span>Coupe + barbe</span><span>23&#x20AC;</span></li>
             <li><span>Shampooing + Coiffage</span><span>4&#x20AC;</span></li>
+		<li><span>Soin Visage</span><span>25&#x20AC;</span></li>
+		<li><span>Vip</span><span>45&#x20AC;</span></li>
         </ul>
         
         <section class="hero-slider hero-style" style="width: 100% !important; position: relative; margin:1.5rem 0;">
